--- a/views/content.html
+++ b/views/content.html
@@ -12,7 +12,7 @@
             <div id="extension-candlecam-no-cameras-detected" class="extension-candlecam-hidden extension-candlecam-fixed-centered">
                 <div>
                     <h3 style="text-align:center">No Candle Cameras detected</h3>
-                    <p style="text-align:center">A scan of your local network did not reveal any Candle Cameras (yet). Try again in a minute or two.</p>
+                    <p style="text-align:center">A scan of your local network did not reveal any Candle Cameras (yet).</p>
                     <button onClick="window.location.reload();" class="text-button">Scan again</button>
                 </div>
             </div>
